--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -10,14 +10,43 @@
     background-color: lightgrey;
 
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    gap: 20px;
+
+}
+
+.grid-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+}
+
+.player-one-container, .player-two-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    gap: 5px;
+
+    text-overflow: clip;
+}
+
+.player-name {
+    word-wrap: break-word;
+    word-break: break-all;
+    height: 25px;
 }
 
 .board {
     display: grid;
     grid-template-columns: repeat(3, 100px);
     grid-template-rows: repeat(3, 100px);
+
+    align-self: center;
+    justify-self: center;
 
     gap: 1px;
 }
@@ -31,4 +60,16 @@
     align-items: center;
 
     font-size: 50px;
+}
+
+.announcement-container {
+    grid-row: 2/3;
+    grid-column: 1/4;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    text-align: center;
+
+    gap: 20px;
 }
