--- a/to-do/src/style.css
+++ b/to-do/src/style.css
@@ -21,12 +21,12 @@ body {
 .project-grid {
 
     width: 1500px;
-    height: 600px;
+    margin-bottom: 20px;
     padding: 20px;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
-    grid-template-rows: repeat(auto-fit, minmax(100px, 600px));
+    grid-template-columns: repeat(auto-fit, minmax(50px, 485px));
+    grid-auto-rows: 500px;
     gap: 20px;
 
     background-color: rebeccapurple;
@@ -37,7 +37,11 @@ body {
 
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(auto-fit, minmax(100px, 200px))
+    grid-template-rows: 50px auto;
+    overflow: scroll;
+    /* grid-auto-rows: repeat(auto-fit, minmax(10px, 250x)); */
+
+    gap: 20px;
 }
 
 .new-task-btn {
@@ -47,7 +51,16 @@ body {
 }
 
 .task {
-    background-color: grey;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+
+    background-color: darkgrey;
+
+}
+
+.task-btn {
+    padding: 5px 10px;
 }
