--- a/cv-application/src/styles/EducationItem.css
+++ b/cv-application/src/styles/EducationItem.css
@@ -1,3 +1,15 @@
 .education-item {
   display: flex;
 }
+
+button {
+  padding: 5px 10px;
+}
+
+.edit-btn {
+  background-color: blue;
+}
+
+.delete-btn {
+  background-color: red;
+}
