--- a/cv-application/src/styles/PersonalDetails.css
+++ b/cv-application/src/styles/PersonalDetails.css
@@ -9,6 +9,11 @@
   flex-direction: column;
   align-items: start;
   gap: 20px;
+
+  padding: 20px;
+
+  border: 1px solid black;
+  border-radius: 20px;
 }
 
 .personal-detail-display {
